istio-rules/helloworld-caller-service-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service-caller
spec:
  hosts:
  - helloworld-service-caller
  http:
    - route:
      - destination:
          host: helloworld-service-caller
