istio-rules/helloworld-service-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - fault:
      abort:
        httpStatus: 503
        percent: 50
    route:
    - destination:
        host: helloworld-service
        port:
          number: 8080
---
