istio-rules/helloworld-service-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service-router
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-service-gateway
  http:
  - match:
    - uri:
        prefix: /caller
    route:
    - destination:
        host: helloworld-service-caller
        port:
          number: 8081
