istio-rules/helloworld-service-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
    - route:
      - destination:
          host: helloworld-service
